# GenomeSketch

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: multi_sequence.fasta  mutated.fasta  reference.fasta  sample.fasta
genomesketch/: __init__.py  alignment.py  cli.py  export.py  io.py  motifs.py  mutations.py  orfs.py  repeats.py  stats.py  transform.py  translate.py  validation.py  visualization.py
scratch_tests/: invalid.fasta  known.fasta  orf.fasta  overlap.fasta  revcomp.fasta
tests/: test_alignment.py  test_cli.py  test_io.py  test_motifs.py  test_mutations.py  test_orfs.py  test_repeats.py  test_stats.py  test_transform.py  test_translate.py  test_validation.py  test_visualization.py
