[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomesketch"
version = "0.1.0"
description = "DNA sequence analysis toolkit for motifs, ORFs, mutations, and alignment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GenomeSketch contributors" }]
keywords = ["bioinformatics", "dna", "fasta", "alignment", "orf", "genomics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
genomesketch = "genomesketch.cli:main"

[project.urls]
Homepage = "https://github.com/kingsleychenlab/GenomeSketch"
Repository = "https://github.com/kingsleychenlab/GenomeSketch"

[tool.setuptools]
packages = ["genomesketch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
